[tool.poetry]
name = "asyncchain"
version = "0.1.1"
description = "Small python library to allow \"async chaining\""
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "mit"
readme = "README.md"
repository = "https://github.com/StarrFox/asyncchain"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
